--- a/springBoot-microservices/hotelService/src/main/resources/application.yml
+++ b/springBoot-microservices/hotelService/src/main/resources/application.yml
@@ -14,6 +14,9 @@ spring:
   application:
     name: hotel-service
 
+  config:
+    import: configserver:http://localhost:8888
+
 logging:
   level:
     org:
@@ -24,12 +27,12 @@ logging:
             sql:
               BasicBinder: trace
 
-eureka:
-  instance:
-    prefer-ip-address: true
+# eureka:
+#   instance:
+#     prefer-ip-address: true
 
-  client:
-    register-With-Eureka: true
-    fetch-Registry: true
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka
+#   client:
+#     register-With-Eureka: true
+#     fetch-Registry: true
+#     serviceUrl:
+#       defaultZone: http://localhost:8761/eureka
