--- a/springBoot-microservices/userService/src/main/resources/application.yml
+++ b/springBoot-microservices/userService/src/main/resources/application.yml
@@ -2,18 +2,25 @@ server:
   port: 8080
 
 spring:
+  application:
+    name: USER-SERVICE
+
   datasource:
     url: jdbc:mysql://localhost:3306/user_service
     username: root
     password: root@123
     driver-class-name: com.mysql.cj.jdbc.Driver
+
   jpa:
     hibernate:
       ddl-auto: update
     # show-sql: true
 
-  application:
-    name: user-service
+    # profiles:
+    #   ctive: dev
+
+  config:
+    import: configserver:http://localhost:8888
 
 logging:
   level:
@@ -25,12 +32,47 @@ logging:
             sql:
               BasicBinder: trace
 
-eureka:
-  instance:
-    prefer-ip-address: true
+management:
+  health:
+    cercuitbreakers:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
 
-  client:
-    register-With-Eureka: true
-    fetch-Registry: true
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka
+Resiliance4j:
+  circuitbreaker:
+    instances:
+      ratingHotelBreaker:
+        register-health-indicator: true
+        event-consumer-buffer-size: 10
+        sliding-window-size: 5
+        sliding-window-type: COUNT_BASED
+        minimum-number-of-calls: 5
+        permitted-number-of-calls-in-half-open-state: 3
+        wait-duration-in-open-state: 10s
+        failure-rate-threshold: 50
+        automatic-transition-from-open-to-half-open-enabled: true
+
+  retry:
+    instances:
+      ratingHotelRetry:
+        max-retry-attempts: 3
+        wait-duration: 5s
+        retry-exceptions:
+        - java.io.IOException
+        - java.util.concurrent.TimeoutException
+
+# eureka:
+#   instance:
+#     prefer-ip-address: true
+
+#   client:
+#     register-With-Eureka: true
+#     fetch-Registry: true
+#     serviceUrl:
+#       defaultZone: http://localhost:8761/eureka
