--- a/springBoot-microservices/hotelService/src/main/resources/application.yml
+++ b/springBoot-microservices/hotelService/src/main/resources/application.yml
@@ -27,6 +27,11 @@ logging:
             sql:
               BasicBinder: trace
 
+okta:
+  oauth2:
+    issuer: https://dev-57853348.okta.com/oauth2/default
+    audience: api://default
+
 # eureka:
 #   instance:
 #     prefer-ip-address: true
