--- a/springBoot-microservices/ratingService/src/main/resources/application.yml
+++ b/springBoot-microservices/ratingService/src/main/resources/application.yml
@@ -13,6 +13,11 @@ spring:
   config:
     import: configserver:http://localhost:8888
 
+okta:
+  oauth2:
+    issuer: https://dev-57853348.okta.com/oauth2/default
+    audience: api://default
+
 # eureka:
 #   instance:
 #     prefer-ip-address: true
